--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.datasource.url=jdbc:h2:file:C:/data/sample
 spring.datasource.username=sa
 spring.datasource.password=
